# cli

./: .gitignore  .goreleaser.yaml  DEVELOPMENT.md  Makefile  README.md  go.mod  go.sum  index.ts  package.json  tsup.config.js
.cursor/commands/: qa.md
.github/workflows/: test.yaml
.npmdisttmpl/: install.js  lib.js  package.json.tmpl  run-kernel.js
cmd/: agent_auth.go  app.go  apps.go  auth.go  beta.go  browser_pools.go  browsers.go  browsers_test.go  create.go  create_test.go  deploy.go  extensions.go  extensions_test.go  invoke.go  login.go  logout.go  logs.go  profiles.go  profiles_test.go  root.go  root_test.go  table.go
cmd/kernel/: main.go
cmd/mcp/: install.go  mcp.go  server.go
cmd/proxies/: common_test.go  create.go  create_test.go  delete.go  delete_test.go  get.go  get_test.go  helpers.go  list.go  list_test.go  proxies.go  types.go
examples/python-basic/: pyproject.toml
examples/python-bu/: main.py
examples/ts-basic/: index.ts  package.json
lib/: util.ts
pkg/auth/: client.go  oauth.go  storage.go  success.html
pkg/create/: copy.go  copy_test.go  dependencies.go  prompts.go  templates.go  templates_test.go  types.go  types_test.go
pkg/table/: table.go
pkg/templates/: templates.go
pkg/templates/python/anthropic-computer-use/: README.md  main.py  pyproject.toml
pkg/templates/python/openai-computer-use/: README.md  main.py  pyproject.toml
pkg/termimg/: termimg.go  termimg_test.go
pkg/update/: check.go
pkg/util/: client.go  errors.go  (+4 more)
scripts/: go-mod-replace-kernel.sh  release.sh  test-browser-pools.sh  test-web-bot-auth.ts
tapes/: demo.tape  fs-demo.tape  process-exec-demo.tape  process-spawn-demo.tape  run-tape.sh
(+60 files in other folders)
