[project]
name = "python-anthropic-cua"
version = "0.1.0"
description = "Kernel reference app for Anthropic Computer Use"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.75.0",
    "playwright>=1.56.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.12.5",
    "typing-extensions>=4.15.0",
    "kernel>=0.23.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
]
