[project]
name = "python-openai-cua"
version = "0.1.0"
description = "Kernel sample app for CUA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "distro==1.9.0",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.12.0",
    "pillow==12.0.0",
    "kernel>=0.22.0",
    "playwright==1.56.0",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "pyee==13.0.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "typing_extensions==4.15.0",
    "urllib3==2.6.1",
]
