[project]
name = "python-openai-cua"
version = "0.1.0"
description = "Kernel sample app for CUA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pillow>=12.0.0",
    "kernel>=0.23.0",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
